--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix": "^2.16.8",
+    "remix-utils": "^7.7.0",
+    "utils": "^0.3.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
